Move to Java 11